--- a/frontend/src/app/[locale]/globals.css
+++ b/frontend/src/app/[locale]/globals.css
@@ -6,7 +6,6 @@ body, html {
     margin: 0;
     padding: 0;
     height: 100%;
-    direction: rtl;
 }
 
 #container {
@@ -94,4 +93,23 @@ h1, p {
 .link:hover {
     color: #005bb5; /* Darker blue on hover */
     border-bottom-color: #005bb5; /* Add border color on hover */
+}
+
+.languages {
+    position: relative;
+}
+
+.languages div {
+    display: inline-block;
+}
+
+.languages .dropdown {
+    position: absolute;
+    right: 0;
+    top: 100%;
+    background-color: #1f2937; /* Tailwind bg-gray-800 */
+    color: #ffffff; /* Tailwind text-white */
+    border: 1px solid #374151; /* Tailwind border-gray-700 */
+    border-radius: 0.375rem; /* Tailwind rounded-md */
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05); /* Tailwind shadow-lg */
 }
