--- a/frontend/src/app/[locale]/globals.css
+++ b/frontend/src/app/[locale]/globals.css
@@ -63,36 +63,40 @@ h1, p {
 }
 
 /* Custom scrollbar styling */
-#rss_feed::-webkit-scrollbar {
+#rss_feed::-webkit-scrollbar,
+#alerts_feed::-webkit-scrollbar {
     width: 12px;
 }
 
-#rss_feed::-webkit-scrollbar-thumb {
+#rss_feed::-webkit-scrollbar-thumb,
+#alerts_feed::-webkit-scrollbar-thumb {
     background-color: #888; /* Change this color to your preference */
     border-radius: 10px;
     border: 3px solid #f1f1f1; /* Adds space around the scrollbar thumb */
 }
 
-#rss_feed::-webkit-scrollbar-thumb:hover {
+#rss_feed::-webkit-scrollbar-thumb:hover,
+#alerts_feed::-webkit-scrollbar-thumb:hover {
     background-color: #555; /* Change this color to your preference */
 }
 
-#rss_feed {
+#rss_feed,
+#alerts_feed {
     scrollbar-color: #888 #f1f1f1; /* For Firefox */
     scrollbar-width: thin; /* For Firefox */
     direction: ltr; /* Ensure scrollbar appears on the right */
 }
 
 .link {
-    color: #0070f3; /* Blue color for links */
+    color: #00f3aa; /* Blue color for links */
     text-decoration: none; /* Remove default underline */
     border-bottom: 2px solid transparent; /* Add transparent border */
     transition: color 0.3s ease, border-bottom-color 0.3s ease; /* Smooth transition */
 }
 
 .link:hover {
-    color: #005bb5; /* Darker blue on hover */
-    border-bottom-color: #005bb5; /* Add border color on hover */
+    color: #00b37d; /* Darker blue on hover */
+    border-bottom-color: #00b37d; /* Add border color on hover */
 }
 
 .languages {
