--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -5,24 +5,20 @@
 body, html {
     margin: 0;
     padding: 0;
+    width: 100%;
     height: 100%;
 }
 
-#container {
+.appContainer {
     display: flex;
     flex-direction: column;
     height: 100vh;
+    width: 100%;
     overflow: hidden;
     overflow-y: auto;
 }
 
-#header, #footer {
-    padding: 10px;
-    text-align: center;
-    flex-shrink: 0;
-}
-
-#main-content {
+.main-content {
     display: flex;
     flex-grow: 1;
     overflow: hidden;
@@ -33,29 +29,6 @@ body, html {
     padding: 10px;
     flex-shrink: 0;
     overflow: hidden; /* Ensure it doesn't scroll */
-}
-
-#content {
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-    overflow-y: auto;
-    padding: 10px;
-}
-
-/* Custom scrollbar styling */
-#content::-webkit-scrollbar {
-    width: 12px;
-}
-
-#content::-webkit-scrollbar-thumb {
-    background-color: #888; /* Change this color to your preference */
-    border-radius: 10px;
-    border: 3px solid #f1f1f1; /* Adds space around the scrollbar thumb */
-}
-
-#content::-webkit-scrollbar-thumb:hover {
-    background-color: #555; /* Change this color to your preference */
 }
 
 h1, p {
@@ -99,21 +72,4 @@ h1, p {
     border-bottom-color: #00b37d; /* Add border color on hover */
 }
 
-.languages {
-    position: relative;
-}
 
-.languages div {
-    display: inline-block;
-}
-
-.languages .dropdown {
-    position: absolute;
-    right: 0;
-    top: 100%;
-    background-color: #1f2937; /* Tailwind bg-gray-800 */
-    color: #ffffff; /* Tailwind text-white */
-    border: 1px solid #374151; /* Tailwind border-gray-700 */
-    border-radius: 0.375rem; /* Tailwind rounded-md */
-    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05); /* Tailwind shadow-lg */
-}
