--- a/src/app/[locale]/about/About.css
+++ b/src/app/[locale]/about/About.css
@@ -1,14 +1,28 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 .aboutContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    --tw-bg-opacity: 1;
-    background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+    background-color: rgb(243 244 246);
     width: 100% !important;
+}
+
+.aboutHeader {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+    font-weight: 700;
+    margin-bottom: 2rem;
+}
+
+.aboutTextContainer {
+    width: 100%;
+    max-width: 42rem;
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+    margin-bottom: 2rem;
+}
+
+.aboutTextContainer p {
+    margin-bottom: 1rem;
 }
