--- a/src/app/[locale]/donation/Donation.css
+++ b/src/app/[locale]/donation/Donation.css
@@ -14,9 +14,8 @@
 }
 
 .form_styling {
-    --tw-space-y-reverse: 0;
-    margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
-    margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
 }
 
 .form_label {
@@ -24,8 +23,7 @@
     font-size: 0.875rem;
     line-height: 1.25rem;
     font-weight: 500;
-    --tw-text-opacity: 1;
-    color: rgb(55 65 81 / var(--tw-text-opacity));
+    color: rgb(55 65 81);
 }
 
 .form_slider {
@@ -33,47 +31,42 @@
     margin-top: 0.5rem;
 }
 
-.form_input {
+.form_input, form_textarea {
     width: 100%;
     padding: 0.5rem 1rem;
     margin-top: 0.25rem;
     margin-bottom: 1rem;
     border-width: 1px;
-    --tw-border-opacity: 1;
-    border-color: rgb(209 213 219 / var(--tw-border-opacity));
+    border-color: rgb(209 213 219);
     border-radius: 0.375rem;
     font-size: 1rem;
     line-height: 1.5rem;
-    --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+}
+
+.form_textarea {
+    height: 7rem;
 }
 
 .form_input:focus {
     outline: 2px solid transparent;
     outline-offset: 2px;
-    --tw-ring-opacity: 1;
-    --tw-ring-color: rgb(191 219 254 / var(--tw-ring-opacity));
 }
 
 .form_button {
     width: 100%;
     padding: 0.5rem 1rem;
-    --tw-bg-opacity: 1;
-    background-color: rgb(37 99 235 / var(--tw-bg-opacity));
-    --tw-text-opacity: 1;
-    color: rgb(255 255 255 / var(--tw-text-opacity));
+    background-color: rgb(37 99 235);
+    color: rgb(255 255 255);
     font-weight: 600;
     border-radius: 0.375rem;
 
 }
 
 .form_button:hover {
-    --tw-bg-opacity: 1;
-    background-color: rgb(29 78 216 / var(--tw-bg-opacity));
+    background-color: rgb(29 78 216);
 }
 
 .form_button:focus {
     outline: 2px solid transparent;
     outline-offset: 2px;
-    --tw-ring-opacity: 1;
-    --tw-ring-color: rgb(191 219 254 / var(--tw-ring-opacity));
 }
