--- a/src/app/[locale]/soldiers/Soldiers.css
+++ b/src/app/[locale]/soldiers/Soldiers.css
@@ -19,12 +19,12 @@
     grid-template-columns: repeat(1, minmax(0, 1fr));
     gap: 1.5rem;
 }
-@media (max-width: 768px) {
+@media (min-width: 768px) {
     .gallery {
         grid-template-columns: repeat(2, minmax(0, 1fr));
     }
 }
-@media (max-width: 1024px) {
+@media (min-width: 1024px) {
     .gallery {
         grid-template-columns: repeat(3, minmax(0, 1fr));
     }
