--- a/src/components/gallery/Card.css
+++ b/src/components/gallery/Card.css
@@ -1,10 +1,8 @@
 .card_container {
     display: flex;
     flex-direction: row;
-    --tw-bg-opacity: 1;
-    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-    --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+    background-color: rgb(255 255 255);
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
     border-radius: 0.375rem;
     overflow: hidden;
 }
@@ -15,6 +13,7 @@
     justify-content: space-evenly;
     padding: 1rem;
     width: 50%;
+    background-color: #18263c;
 }
 
 .card_info_name {
