--- a/src/components/layout/Navbar.css
+++ b/src/components/layout/Navbar.css
@@ -1,12 +1,7 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 .navbarContainer {
     position: relative;
     width: 100%;
-    --tw-bg-opacity: 1;
-    background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+    background-color: rgb(31 41 55);
     padding: 0.5rem;
     display: flex;
     flex-direction: row;
@@ -33,9 +28,9 @@
     position: absolute;
     right: 0;
     top: 100%;
-    background-color: #1f2937; /* Tailwind bg-gray-800 */
-    color: #ffffff; /* Tailwind text-white */
-    border: 1px solid #374151; /* Tailwind border-gray-700 */
-    border-radius: 0.375rem; /* Tailwind rounded-md */
-    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05); /* Tailwind shadow-lg */
+    background-color: #1f2937;
+    color: #ffffff;
+    border: 1px solid #374151;
+    border-radius: 0.375rem;
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
