--- a/src/components/stories/Blog.css
+++ b/src/components/stories/Blog.css
@@ -26,3 +26,76 @@
 .blogContent::-webkit-scrollbar-thumb:hover {
     background-color: #555; /* Change this color to your preference */
 }
+
+.publish_container {
+    width: 75%;
+    margin-bottom: 1rem;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.publish_container label {
+    display: block;
+    margin-bottom: 1rem;
+}
+
+.publish_select {
+    width: 100%;
+    padding: 0.5rem;
+    border-width: 1px;
+    border-radius: 0.25rem;
+    margin-bottom: 1rem;
+}
+
+.publish_content {
+    width: 100%;
+    padding: 0.5rem;
+    border-width: 1px;
+    border-radius: 0.25rem;
+}
+
+.publish_btn {
+    margin-top: 0.5rem;
+    padding: 0.5rem;
+    background-color: rgb(59 130 246);
+    color: rgb(255 255 255);
+    border-radius: 0.25rem;
+}
+
+.blog_title {
+    margin-top: 1.25rem;
+    margin-bottom: 1rem;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 700;
+    text-align: center;
+}
+
+.blog_search_container {
+    width: 75%;
+    padding: 0.5rem;
+    margin: auto;
+}
+
+.blog_search_container label {
+    display: block;
+    margin-bottom: 1rem;
+}
+
+
+.blog_search_select {
+    padding: 0.5rem;
+    border-width: 1px;
+    border-radius: 0.25rem;
+    margin-bottom: 1rem;
+}
+
+.blog_content {
+    width: 75%;
+    text-align: center;
+    border-width: 1px;
+    border-color: rgb(209 213 219);
+    padding: 1rem;
+    margin: auto;
+}
