admin panel complete. better error handling at 'addSoldier' page.

--- a/src/app/[locale]/admin/Admin.css
+++ b/src/app/[locale]/admin/Admin.css
@@ -59,13 +59,13 @@
 
 .tableHeader {
     padding: 0.75rem 1.5rem;
-    text-align: left;
     font-size: 0.75rem;
     line-height: 1rem;
     font-weight: 500;
     color: rgb(107 114 128);
     text-transform: uppercase;
     letter-spacing: 0.05em;
+    text-align: center;
 }
 
 .tableBodyContainer {
@@ -87,6 +87,7 @@
 .buttonApprove {
     color: rgb(22 163 74);
     margin-right: 0.5rem;
+    margin-left: 0.5rem;
 }
 
 .buttonApprove:hover {
@@ -95,6 +96,8 @@
 
 .buttonDeny {
     color: rgb(220 38 38);
+    margin-right: 0.5rem;
+    margin-left: 0.5rem;
 }
 
 .buttonDeny:hover {
