--- a/src/app/[locale]/addSoldier/addSoldier.css
+++ b/src/app/[locale]/addSoldier/addSoldier.css
@@ -55,3 +55,19 @@
     outline-offset: 2px;
     background-color: rgb(37 99 235);
 }
+
+.error_message {
+    color: rgb(239 68 68);
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    font-weight: 700;
+    margin-top: 0.5rem;
+}
+
+.success_message {
+    color: rgb(16 185 129);
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    font-weight: 700;
+    margin-top: 0.5rem;
+}
