stories are not automatically added to list on publish. instead success publish message is shown, and the story will be added to the list only after admin approval

--- a/src/components/stories/Blog.css
+++ b/src/components/stories/Blog.css
@@ -95,3 +95,9 @@
     color: rgb(255 255 255);
     border-radius: 0.25rem;
 }
+
+.publish_success_message {
+    color: rgb(16 185 129);
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
