--- a/src/components/stories/PublishModal.css
+++ b/src/components/stories/PublishModal.css
@@ -51,3 +51,9 @@
     color: rgb(255 255 255);
     border-radius: 0.25rem;
 }
+
+.error {
+    color: red;
+    font-size: 0.8rem;
+    margin-top: 0.5rem;
+}
